samples/_failures_safe/1761327082_89f334_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_918a2164.c: In function ‘main’:
./samples/SAFE/__tmp_918a2164.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
